Add new examples